@@ -81,6 +81,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #17997: Change behavior of ``ssl.match_hostname()`` to follow RFC 6125,
+  for security reasons.  It now doesn't match multiple wildcards nor wildcards
+  inside IDN fragments.
+
 - Issue #16039: CVE-2013-1752: Change use of readline in imaplib module to limit
   line length.  Patch by Emil Lind.
 
